	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1065)
 * "limit '-refine' ..." will make 'limit' act on the current list, rather than on the full anew. 
# (r1063)
 * Command "list 'mark' {args}" accepts now exactly what "limit {args}" does.
# (r1059)
 * Doc fix: stating that --sanity-check terminates the program, rather than continuing.
# (r1056,r1062)
 * New criteria for the "limit" command:
   If invoked with '~!' will restrict to files with unique basename.
   If with '~=', to files with duplicate basename;
   if with '~^', to the first of the files with duplicate basename;
   if with '~$', to the last of the files with duplicate basename. 
# (r1053)
 * Added variable _all_file_loaders: space-separated list of hardcoded file loaders usable with _file_loader.
# (r1051,r1052)
 * Optional -R/--recursive[=arg] argument, overwrites (if set) or appends to (if beginning with + or |) 
   the "_pushdir_re" variable (recursed filename extensions).
# (r1046)
 * Introduced a "#!fim:+=" special description line to append to cached description.
 * Introduced a "#!fim:^=" special description line to prepend to cached description.
# (r1045)
 * Introduced a "#!fim:!=" special description line to reset all variables of the cached namespace.
# (r1043)
 * 'desc        "save"' functionality to save descriptions file data from the currently browsable images list.
# (r1048)
 * 'desc "-append" "save"' will work in append mode.
# (r1044,r1047)
 * 'desc "-all" "save"' will save also all descriptions file variables.
# (r1048)
 * 'desc "-nooverw" "-append" "save"' will either force overwrite; saving and appending possible, if user request.
# (r1039, also in branches/0.5)
 * to ease reproducible builds: imposing LC_ALL=C to $(YACC) and $(SORT), vim2html.pl reads SOURCE_DATE_EPOCH
# (r1038, also in branches/0.5)
 * fix: when stdint.h is available use uint8_t, uint16_t, uint32_t instead of non-portable __u8, __u16, __u32