@@ -318,7 +318,7 @@ info : display information about the current file
 .B
 limit
 .fi
-limit ['\-further'] [{expression} |{variable} {value}] : A browsable file list filtering function (like limiting in the 'mutt' program). Uses information loaded via \-\-load\-image\-descriptions\-file.  If '\-further' is present, will start with the current list; if not, with the full list.  If {variable} and {values} are provided, limit to files having property {variable} set to {value}.  If {expression} is one exclamation point ('!'), will limit to the currently marked files only.  If {expression} is '~!' will limit to files with unique basename;  if '~=', to files with duplicate basename;  if '~^', to the first of the files with duplicate basename;  if '~$\:', to the last of the files with duplicate basename.  For other values of {expression}, limit to files whose description string matches {expression}.  Invoked with no arguments, the original browsable files list is restored.
+limit ['\-further'] [{expression} |{variable} {value}] : A browsable file list filtering function (like limiting in the 'mutt' program). Uses information loaded via \-\-load\-image\-descriptions\-file.  If '\-further' is present, will start with the current list; if not, with the full list.  If {variable} and {values} are provided, limit to files having property {variable} set to {value}.  If {expression} is one exclamation point ('!'), will limit to the currently marked files only.  If {expression} is '~!' will limit to files with unique basename;  if '~=', to files with duplicate basename;  if '~^', to the first of the files with duplicate basename;  if '~$\:', to the last of the files with duplicate basename.  On '~z', followed by MINSIZE[\-MAXSIZE], (each a number eventually followed by a multiplier of k,K,m,M) limiting on filesize will occur;  on '~d', followed by MINTIME[\-MAXTIME], (each a number) limiting on file time (struct stat's "st_mtime", in seconds) will occur.  For other values of {expression}, limit to files whose description string matches {expression}.  Invoked with no arguments, the original browsable files list is restored.
 .fi
 
 .na
